src/Tests/Spectre.Console.Tests/Expectations/Cli/Parsing/UnknownCommand/Test_3.Output.verified.txt
Error: Unknown command 'bat'.

       dog bat 14
           ^^^ Did you mean 'cat'?